MetaDataAPI/objects/UserDetail__c.object
<CustomObject>
    <label>UserDetail</label>
    <nameField>
        <label>UserDetails  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passwordd__c</fullName>
        <label>Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>